# continualgym

./: README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
continualgym/: __init__.py
continualgym/benchmarks/: __init__.py  registry.py
continualgym/drift/: __init__.py  schedules.py
continualgym/utils/: __init__.py  metrics.py
continualgym/wrappers/: __init__.py  continuing.py  nonstationary.py  pipeline.py
examples/: quickstart.py
tests/: test_continualgym.py
